--- a/src/assets/styles/base.scss
+++ b/src/assets/styles/base.scss
@@ -12,6 +12,10 @@
   width: 1200px;
 }
 
+.wow {
+  visibility: hidden;
+}
+
 .imgAnimateScale,
 .imgAnimateUp,
 .imgAnimateDown,
@@ -34,5 +38,27 @@
   }
   .imgAnimateRight:hover {
     transform: translateX(10px);
+  }
+}
+
+/* 包裹箭头效果的盒子 */
+.arrowTransform {
+  animation: bounce-inSS 2s infinite;
+  /* 启动动画特效 */
+}
+/* 箭头动画 */
+@keyframes bounce-inSS {
+  0%,
+  20%,
+  50%,
+  80%,
+  100% {
+    transform: translateY(0);
+  }
+  40% {
+    transform: translateY(5px);
+  }
+  60% {
+    transform: translateY(10px);
   }
 }
